# sixelmath

./: CHANGES.txt  LICENSE.txt  README.md  setup.cfg
sixelmath/: __init__.py  __main__.py  latex.py  querycolor.py  sympysixel.py
