[metadata]
name = sixelmath
version = attr: sixelmath.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://github.com/cdelker/sixelmath
description = Render LaTeX math and Sympy expressions to Sixel Terminal Graphics. Suuports any Math-enabled font, no LaTeX installation required.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = LaTeX, math, sympy, sixel, terminal
license = MIT
project_urls =
    Documentation = https://github.com/cdelker/sixelmath
    Source Code = https://github.com/cdelker/sixelmath
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Programming Language :: Python :: 3.14
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
zip_safe = False
python_requires = >= 3.9
include_package_data = True
install_requires =
    ziamath>=0.13
    latex2mathml
    timg
    cairosvg
    Pillow

[options.entry_points]
console_scripts =
    sixelmath = sixelmath.__main__:main
